main.css
html {
      background: url(img/background_morning_blur.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
    }

#facebook-num, #twitter-num, #yelp-num, #to-add {
  width: 85px;
  height: 165px;
  box-shadow: none;
  margin: 0;
}

#facebook-num {
  margin-left: 20px;
  background-color: rgba(54, 88, 153, .6);
}

#facebook-num:hover {
  background-color: #3B5998;
  outline: none;
}

#twitter-num {
  background-color: rgba(29, 161, 242, .6);
}

#twitter-num:hover {
  background-color: #1DA1F2;
  outline: none;
}

#yelp-num {
  background-color: rgba(169, 18, 0, .6);
}

#yelp-num:hover {
  background-color: #C41200;
  outline: none;
}

#to-add {
  background-color: rgba(0, 0, 0, .5);
}

#to-add:hover {
  background-color: rgba(0, 0, 0, .7);
  /*color: #000;*/
  outline: none;
}

.social-num {
  display: flex !important;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  color: white;
  font-size: 12px;
  font-family: "open sans";
  font-weight: lighter;
  padding: 20px 10px 5px;
}

.custom-icon {
  width: 40px;
  height: 40px;
  background-color: white;
}

.facebook-icon {
  -webkit-mask-image: url('img/facebook_icon.svg');
  mask-image: url('img/facebook_icon.svg');
}

.twitter-icon {
  -webkit-mask-image: url('img/twitter_icon.svg');
  mask-image: url('img/twitter_icon.svg');
}

.yelp-icon {
  -webkit-mask-image: url('img/yelp_icon.svg');
  mask-image: url('img/yelp_icon.svg');

}

.add-icon {
  -webkit-mask-image: url('img/add_icon.svg');
  mask-image: url('img/add_icon.svg');
}

.square {
  width: 157px !important;
  height: 165px !important;
  margin: 0 !important;
  box-shadow: none !important;
}

.square:hover {
  outline: none !important;
}

#pro-tips {
  height: 165px;
  width: 517px;
  left: -5px;
  margin-top: 20px;
}

#pro-tips:hover {
  outline: none;
}

#hero {
  width: 875px;
  height: 351px;
}

#to-dos {
  width: 162px;
  height: 351px;
  margin: 0;
  margin-left: -10px;
}

#to-dos:hover {
  outline: none;
}

#upper {
  display: flex;
  justify-content: center;
}

#review-loader {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 130px;
}

.lower {
  display: flex;
  justify-content: center;
  padding-left: 60px;
}

#live-slide {
  width: 345px;
  height: 350px;
  box-shadow: none;
  margin: 0 20px !important;
}

#live-slide:hover {
  outline: none;
}

#add-on {
  margin-top: 20px !important;
}

.flare {
  cursor: pointer;
}

#pokemon {
  margin-top: 20px;
}

